# Yooz

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.hpp
Triplets/: x64-windows-yooz-md.cmake
Yooz/: CMakeLists.txt  Yooz.hpp  yooz_gl_platform.cmake  yzDeps.hpp  yzSTD.hpp  yzStds.hpp  yzpch.hpp
Yooz/Core/: yzApplication.cpp  yzApplication.hpp  yzAssert.cpp  yzAssert.hpp  yzBase.hpp  yzDelegate.hpp  yzEntryPoint.cpp  yzEvent.hpp  yzLogger.cpp  yzLogger.hpp  yzTimer.hpp  yzWindow.hpp
Yooz/Graphics/: yzBatcher.hpp  yzCamera.cpp  yzCamera.hpp  yzColor.cpp  yzColor.hpp  yzGraphicsDevice.hpp  yzGraphicsFeatures.hpp  yzGraphicsParams.cpp  yzGraphicsParams.hpp  yzGraphicsStates.hpp  yzImage.cpp  yzImage.hpp  yzRasterizer.hpp  yzRenderer.hpp  yzShader.hpp  yzTexture.hpp
Yooz/Input/: yzInputCodes.hpp  yzInputManager.cpp  yzInputManager.hpp  yzKeyboard.hpp  yzMouse.hpp
Yooz/Math/: yzConstants.hpp  yzFunctions.cpp  yzFunctions.hpp  yzRectangle.hpp  yzTransform.cpp  yzTransform.hpp  yzVector2.hpp
Yooz/Platform/: yzMessageBox.hpp  yzPlatform.hpp
Yooz/Platform/GL/: yzBatcher.GL.cpp  yzGraphicsDevice.GL.cpp  yzGraphicsFeatures.GL.cpp  yzRasterizer.GL.cpp  yzRenderer.GL.cpp  yzShader.GL.cpp  yzTexture.GL.cpp
Yooz/Platform/SDL/: yzKeyboard.SDL.cpp  yzMessageBox.SDL.cpp  yzMouse.SDL.cpp  yzPlatform.SDL.cpp  yzWindow.SDL.cpp
Yooz/Shader/: renderer_fs.glsl  renderer_vs.glsl
